# mse342-project

./: .gitignore  .gitmodules  README.md  idea-generation.md  notes.md  outline_for_report.md  project-proposal.tex  references.bib  related-work.md  syllabus-excerpt.md
CSDI_Experiment/: README.md  commands.txt  run.sh  run_cluster.sh
CSDI_Experiment/scripts/: run_cuda.sh  run_fixed_split_cuda.sh  run_topology_comparison_cuda.sh  run_walk_forward_mps.sh
CSDI_Experiment/src/: __init__.py  analyze_paths.py  combine_walk_forward_outputs.py  compare_runs.py  fixed_split_scenarios.py  investigate_results.py  package_results.py  walk_forward_csdi.py
FinDiffusion/: .gitignore  README.md  pyproject.toml  requirements.txt
FinDiffusion/configs/: default.yaml  large.yaml
FinDiffusion/notebooks/: demo.ipynb
FinDiffusion/paper_tex/: paper.bbl  paper.tex  reference.bib
FinDiffusion/scripts/: download_data.py  evaluate.py  evaluate_hedging.py  evaluate_single.py  generate.py  hedging_from_predictions.py  pipeline.py  sherlock_hedge.sh  sherlock_train.sh  train.py  train_hedging.py
FinDiffusion/src/: __init__.py
FinDiffusion/src/data/: __init__.py
FinDiffusion/src/evaluation/: __init__.py  metrics.py  stylized_facts.py
FinDiffusion/src/hedging/: __init__.py  environment.py  model.py  trainer.py
FinDiffusion/src/models/: __init__.py  attention.py  condition.py  diffusion.py  topo_loss.py  unet.py
FinDiffusion/src/training/: __init__.py  trainer.py
FinDiffusion/tests/: __init__.py  test_data.py  test_hedging_from_predictions.py  test_model.py
FinDiffusion_CSDI_Pipeline/: README.md  config.yaml  requirements.txt  results_summary_20260610.md  run_pipeline.py
papers/: README.md
scripts/: build_french_returns.py
(+24 files in other folders)
